<resources>
    <string name="app_name">spotify-wrapper2.0</string>
    <string name="title_wrapped">Wrapped</string>
    <string name="title_history">History</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_new_account">Create New Account</string>
    <string name="connect_spotify_account">Connect Spotify Account</string>
    <string name="create_password">Create Password:</string>
    <string name="create_username">Create Username:</string>
    <string name="enter_email_registered_on_spotify">Enter Email Registered On Spotify:</string>
</resources>